GPC/tests/examples/fail/nonCostantTopLevel.gpc

GPRM::Kernel::Test test;
test = GPRM::Kernel::Test::Test();

//TODO Possibly change so int is "upcasted" to kernel type
int x = test.m1();

int nonConstantTopLevel() {
    return 0;
}
